# baldr

./: .baldr.yaml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  baldr.yaml  verify.sh
.github/workflows/: build.yml  release.yml
resources/: Dockerfile
src/: cfg.rs  cli.rs  cmake.rs  lib.rs  main.rs  utils.rs
tests/: reg-test-cc-symlink.rs  reg-test-configure-failure.rs  reg-test-errors.rs  reg-test.rs  reg-test.sh
tests/cpp/: .baldr.yaml  CMakeLists.txt  main.cc
